# ix-index

./: .editorconfig  .envrc  .git-commit-msg.tmp  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clone.toml  flake.nix  loop-prompt.md  meta.err  osv-scanner.toml  ruff.toml  rust-toolchain.toml  sgconfig.yml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: agent-instructions.sh
.github/: dependabot.yml
.github/scripts/: bump-rust-nightly.py  repo-metadata.sh
.github/workflows/: ai-review-gate.md  ai-review-gate.yml  blast-radius.yml  cache-push-watchdog.yml  cache-push.yml  check.yml  codeql.yml  codex-review-gate.yml  cve-scan.yml  fork-closure-gates.yml  fork-sync.yml  fuzz-nbt.yml  mirror-sync.yml  pages.yml  promote-main.yml  release-tag.yml  repo-metadata.yml  scorecard.yml  system-prompt-eval.yml  update-cargo.yml  update-claude-code.yml  update-flake-lock.yml  update-loaders.yml  update-rust-nightly.yml  update.yml  warm-public-cache.yml
.zed/: settings.json
agent-context/: README.md
agent-context/sections/: 00-intro.md  00a-execution.md  00b-index-feedback.md  01-scope-of-agents-md.md  01b-craft-standard.md  02-workflow.md  02a-index-git-push.md  03-site-updates.md  04-writing-style.md  04b-reply-shape.md  05-inline-comments.md  06-rust-style.md  07-python-style.md  08-sane-defaults.md  08a-user-facing-commands.md  08b-why-dag-runner.md  09-nix-philosophy.md  10-module-conventions.md  11-image-conventions.md  12-layout.md  13-dependency-intake.md  14-nix-practices-to-tighten.md  15-nix-style-ast-grep-enforced.md  15-nix-style.md  16-issues.md  17-tests.md  18-searching.md  19-debugging-vms.md  20-linting.md
agents/: code-reviewer.md  index-action-runner.md
agents-md/: README.md
agents-md/sections/: 00-intro.md  01-scope-of-agents-md.md  01b-craft-standard.md  02-workflow.md  02a-index-git-push.md  03-site-updates.md  04-writing-style.md  17-tests.md  (+18 more)
astlog-rules/: cargo.astlog  elixir.astlog  nix-lints.md  nix.astlog  rust.astlog
doc/: index.md
docs/: index.md
examples/python-daily-scraper/: README.md  default.nix  flake.nix  package.nix  pyproject.toml  service.nix
examples/python-daily-scraper/src/daily_scraper/: __init__.py
lib/: agent-context.nix  agents-md.nix  agents.nix  apple-sdk-toolchain.nix  artifacts.nix  bench.nix  build-bun-site.nix  build-gradle-fat-jar.nix  build-js-site.nix  build-npm-site.nix  build-npm-vitest.nix  build-svelte-site.nix  build-uv-application.nix  build-zig-package.nix  cargo-unit.nix  checks.nix  claude-plugin.nix  deep-merge.nix  default.nix  discovery.nix  errors.nix  fleet.nix  fork-closure-gates.nix  fork-packages.nix  fork-updater.nix  go-unit.nix  health-checks.nix  images.nix  ix-base.nix  ix-oci-layer.nix  ix-platform.nix  libghostty-vt.nix  macos-sdk.nix  minecraft-loader.nix  minecraft-nbt-format.nix  minecraft-sync-managed.nix  mk-fork-checks.nix  mk-package-set.nix  mutable-json.nix  overlay.nix  (+16 more)
modules/: default.nix
nix-rules/: no-abort.yml  no-ambiguous-gpl-license.yml  no-buildphase-pure-default.yml  no-buildrustpackage.yml  no-builtins-fetch.yml  no-builtins-path-without-name.yml  no-deprecated-iflist-empty.yml  no-deprecated-trace.yml  no-derivation-name-version-interp.yml  no-double-paren-attr.yml  no-empty-list-concat.yml  no-fixup-phase-override.yml  no-import-in-imports.yml  no-legacy-let-block.yml  no-mddoc.yml  no-mkmerge-singleton.yml  no-mkoption-conditional-default.yml  no-mkoverride-numeric.yml  no-old-go-vendorsha256.yml  no-old-npm-depssha256.yml  no-old-rust-cargosha256.yml  no-pkgs-lib.yml  no-pname-finalattrs-self-ref.yml  no-recursive-update.yml  no-stringly-flags.yml  no-substitute-all.yml  no-throw-without-message.yml  no-types-attrs.yml  no-types-unspecified.yml  no-unquoted-splice.yml  prefer-fileset-over-cleansource.yml  prefer-genattrs-listtoattrs.yml  prefer-genattrs-mapattrs-identity.yml  prefer-importjson.yml  prefer-lib-optional-singleton.yml  prefer-lib-optional.yml
nix-rules-tests/: no-abort-test.yml  no-buildphase-pure-default-test.yml  no-derivation-name-version-interp-test.yml  no-fixup-phase-override-test.yml  no-import-in-imports-test.yml  no-impure-test.yml  no-mkoption-conditional-default-test.yml  no-old-go-vendorsha256-test.yml  no-old-npm-depssha256-test.yml  no-old-rust-cargosha256-test.yml  no-pname-finalattrs-self-ref-test.yml
rfcs/: 0000-template.html  0001-router-vm.html  0002-third-party-integrations.html  0003-mcp-composable-clis.html  0004-otel-ingestion-bus.html  0005-cargo-drv.html  0006-hosted-tool-credentials.html  0007-dev-vm-environments.html  index.html
rust-rules/: no-anon-tuple.yml
sdk/: README.md
sdk/python/: LICENSE  default.nix  pyproject.toml
sdk/python/ix_sdk/: __init__.py  _ix_sdk.pyi
sdk/rust/: Cargo.toml  default.nix
sdk/rust/crates/ix-sdk/: Cargo.toml
sdk/rust/crates/ix-sdk/src/: lib.rs
site/: eslint.config.js  package-lock.json  package.json  svelte.config.js  vitest.config.ts
template/: flake.nix
tests/: default.nix  efx-plan.nix  minecraft-blocks-vm.nix  pins.json  portable-services.nix  provenance.nix  symphony-home-module.nix
tests/fixtures/cargo-unit-hello/: Cargo.toml  build.rs
tests/fixtures/cargo-unit-hello/benches/: greeting.rs
tests/fixtures/cargo-unit-hello/src/: goodbye.rs  lib.rs
tests/fixtures/cargo-unit-prebuilt/crates/prebuilt-chain-consumer/: Cargo.toml
tests/fixtures/cargo-unit-prebuilt/crates/prebuilt-chain-consumer/src/: main.rs
tests/fixtures/cargo-unit-prebuilt/crates/prebuilt-consumer/: Cargo.toml
tests/fixtures/cargo-unit-prebuilt/crates/prebuilt-consumer/src/: main.rs
tests/fixtures/cargo-unit-prebuilt/crates/prebuilt-mid/: Cargo.toml
tests/fixtures/cargo-unit-prebuilt/crates/prebuilt-mid/src/: lib.rs
tests/fixtures/uv-app/: pyproject.toml
tests/fixtures/uv-app/src/uv_app_fixture/: __init__.py
tools/: blast-radius-test.sh  blast-radius.nu  codex-loop.py  ix-fleet.py  mc-source.nu  update-ix-cli.py  update-loaders.py  update-mods.py  update-sounds.nu
(+1173 files in other folders)
