[workspace]
members = [
  "modules/services/resource-monitor/stats-writer",
  "packages/agents-md",
  "packages/ast-merge/ast",
  "packages/ast-merge/cli",
  "packages/ast-merge/diff",
  "packages/ast-merge/git",
  "packages/ast-merge/langs",
  "packages/ast-merge/matcher",
  "packages/source/atuin",
  "packages/source/claude",
  "packages/source/codex",
  "packages/source/git",
  "packages/clone-detect/cli",
  "packages/clone-detect/detect",
  "packages/clone-detect/hash",
  "packages/clone-detect/pragma",
  "packages/clone-detect/scanner",
  "packages/code-highlight",
  "packages/code-tokenizer",
  "packages/dag-runner",
  "packages/file-language",
  "packages/file-search",
  "packages/git-log-pretty",
  "packages/github-avatar",
  "packages/ix-dev-diagnose",
  "packages/kitty",
  "packages/macos-vm",
  "packages/mcp",
  "packages/minecraft/nbt",
  "packages/minecraft/sound",
  "packages/minecraft/sync-managed",
  "packages/mixedbread",
  "packages/nix-cargo-unit",
  "packages/nix-web-monitor/parser",
  "packages/nix-web-monitor/server",
  "packages/oci-image-builder",
  "packages/progress-style",
  "packages/reel",
  "packages/repo-walker",
  "packages/source/linear",
  "packages/search",
  "packages/search-core",
  "packages/source/meta",
  "packages/search-py",
  "packages/source/slack",
  "packages/sink/mixedbread",
  "packages/sink/parquet",
  "packages/indexer",
  "packages/tap",
  "packages/tap/protocol",
  "packages/tap/pty",
  "packages/terminal-theme",
  "packages/dashboard",
  "packages/dashboard-core",
  "packages/tui",
  "packages/tui-node",
  "packages/tui-py",
  "packages/vt/ix-vt",
  "packages/vt/ix-vt-sys",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
# Group lints need priority below per-lint overrides so allowlist entries
# (such as `multiple_crate_versions`) can opt out without disabling the group.
# Cargo emits `lint_groups_priority` errors otherwise.
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"

[workspace.dependencies]
anstream = "1"
anstyle = "1"
anyhow = "1"
arrow = "58"
askama = { version = "0.16.0", default-features = false }
ast-merge-ast = { path = "packages/ast-merge/ast" }
ast-merge-diff = { path = "packages/ast-merge/diff" }
ast-merge-git = { path = "packages/ast-merge/git" }
ast-merge-langs = { path = "packages/ast-merge/langs" }
ast-merge-matcher = { path = "packages/ast-merge/matcher" }
axum = "0.8"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false }
clap = "4"
source-atuin = { path = "packages/source/atuin" }
source-claude = { path = "packages/source/claude" }
source-codex = { path = "packages/source/codex" }
source-git = { path = "packages/source/git" }
clone-detect = { path = "packages/clone-detect/detect" }
clone-hash = { path = "packages/clone-detect/hash" }
clone-pragma = { path = "packages/clone-detect/pragma" }
clone-scanner = { path = "packages/clone-detect/scanner" }
code-highlight = { path = "packages/code-highlight" }
code-tokenizer = { path = "packages/code-tokenizer" }
github-avatar = { path = "packages/github-avatar" }
kitty = { path = "packages/kitty" }
color-eyre = "0.6"
dashboard-core = { path = "packages/dashboard-core" }
devicons = "0.6"
dirs = "5"
file-language = { path = "packages/file-language" }
fontdue = "0.9"
futures = "0.3"
git2 = { version = "0.20", default-features = false }
glob = "0.3"
hegeltest = { version = "0.14", default-features = false }
ignore = "0.4"
indicatif = "0.18"
insta = { version = "1.42", features = ["json"] }
lazy-regex = "3.4"
libc = "0.2"
source-linear = { path = "packages/source/linear" }
mixedbread = { path = "packages/mixedbread" }
loro = "1.12"
napi = { version = "3", default-features = false, features = ["napi6", "tokio_rt"] }
napi-build = "2"
napi-derive = "3"
ndarray = "0.16"
nix = "0.30"
nix-web-monitor-parser = { path = "packages/nix-web-monitor/parser" }
numpy = "0.28"
object = { version = "0.37", default-features = false, features = [
  "read",
  "write",
  "std",
] }
object_store = { version = "0.13", features = ["aws"] }
parking_lot = "0.12"
parquet = { version = "58", features = ["arrow"] }
progress-style = { path = "packages/progress-style" }
pty-process = { version = "0.4", features = ["async"] }
pyo3 = { version = "0.28", features = ["abi3-py311"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
quartz_nbt = "0.2.9"
rayon = "1"
regex = "1"
repo-walker = { path = "packages/repo-walker" }
image = { version = "0.25", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "multipart",
] }
rmcp = "1.7"
rmp-serde = "1"
rodio = { version = "0.19", default-features = false, features = ["vorbis"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rustc-hash = "2.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.8"
schemars = "1"
search-core = { path = "packages/search-core" }
source-meta = { path = "packages/source/meta" }
serde = "1"
serde_json = "1"
sha2 = "0.10"
similar = "2"
source-slack = { path = "packages/source/slack" }
sink-mixedbread = { path = "packages/sink/mixedbread" }
sink-parquet = { path = "packages/sink/parquet" }
snafu = "0.9"
strip-ansi-escapes = "0.2"
tango-bench = "0.7"
tantivy = "0.26"
tap-protocol = { path = "packages/tap/protocol" }
tap-pty = { path = "packages/tap/pty" }
tar = "0.4"
tempfile = "3"
terminal-light = "1"
terminal-theme = { path = "packages/terminal-theme" }
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
toml = { version = "1.1.2", default-features = false }
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-dockerfile-updated = "0.2"
tree-sitter-elixir = "0.3"
tree-sitter-go = "0.25"
tree-sitter-haskell = "0.23"
tree-sitter-highlight = "0.26"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-language = "0.1"
tree-sitter-lua = "0.5"
tree-sitter-md = "0.5"
tree-sitter-nix = "0.3"
tree-sitter-ocaml = "0.25"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.26"
tree-sitter-sequel = "0.3"
tree-sitter-svelte-ng = "1.0"
tree-sitter-swift = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-yaml = "0.7"
tui = { path = "packages/tui" }
url = { version = "2.5.8", default-features = false }
uuid = "1"
vt100 = "0.16"
webpki-roots = "1"
wtransport = "0.7"
x509-parser = "0.18"
