[workspace]
members = [
  "modules/services/resource-monitor/stats-writer",
  "packages/blast-radius",
  "packages/build-version",
  "packages/agent/claude-hooks",
  "packages/agent/claude-stories",
  "packages/agent/fff-suggest",
  "packages/code/ast-merge/ast",
  "packages/code/ast-merge/cli",
  "packages/code/ast-merge/diff",
  "packages/code/ast-merge/git",
  "packages/code/ast-merge/langs",
  "packages/code/ast-merge/matcher",
  "packages/code/astlog/core",
  "packages/code/astlog/cli",
  "packages/code/astlog/py",
  "packages/search/source/atuin",
  "packages/search/source/claude",
  "packages/search/source/codex",
  "packages/search/source/debug",
  "packages/search/source/git",
  "packages/search/source/journald",
  "packages/code/clone-detect/cli",
  "packages/code/clone-detect/detect",
  "packages/code/clone-detect/hash",
  "packages/code/clone-detect/pragma",
  "packages/code/clone-detect/scanner",
  "packages/config-launch",
  "packages/code/code-highlight",
  "packages/search/code-tokenizer",
  "packages/dag-runner",
  "packages/code/edit-applier",
  "packages/code/file-language",
  "packages/search/file-search",
  "packages/code/scipql/core",
  "packages/code/scipql/cli",
  "packages/code/scipql/py",
  "packages/flecs-query/core",
  "packages/flecs-query/mcp",
  "packages/flecs-query/py",
  "packages/git-log-pretty",
  "packages/github-avatar",
  "packages/google/auth",
  "packages/google/calendar",
  "packages/google/calendar/cli",
  "packages/google/gmail",
  "packages/google/gmail/cli",
  "packages/google/mcp",
  "packages/google/py",
  "packages/indexbench",
  "packages/ix-dev-diagnose",
  "packages/ix-windows",
  "packages/terminal/kitty",
  "packages/search/lake/iceberg",
  "packages/minecraft/minecraft/nbt",
  "packages/minecraft/minecraft/sound",
  "packages/minecraft/minecraft/sync-managed",
  "packages/search/mixedbread",
  "packages/mynoise",
  "packages/nix/nix-web-monitor/parser",
  "packages/nix/nix-web-monitor/server",
  "packages/nix/oci-image-builder",
  "packages/search/polars-mixedbread",
  "packages/progress-style",
  "packages/tui/reel",
  "packages/repo-walker",
  "packages/screencast/screencast",
  "packages/screencast/screencast-ingest",
  "packages/search/source/linear",
  "packages/search/source/github",
  "packages/search/search",
  "packages/search/search-core",
  "packages/search/source/meta",
  "packages/search/source/parquet",
  "packages/search/search-py",
  "packages/skill-lint",
  "packages/search/source/slack",
  "packages/search/sink/mixedbread",
  "packages/search/sink/parquet",
  "packages/search/indexer",
  "packages/tui/tap",
  "packages/tui/tap/protocol",
  "packages/tui/tap/pty",
  "packages/terminal/terminal-theme",
  "packages/dashboard/dashboard",
  "packages/dashboard/dashboard-core",
  "packages/tui/tui",
  "packages/tui/tui-node",
  "packages/tui/tui-py",
  "packages/vm/vmkit",
  "packages/tui/vt/ix-vt",
  "packages/tui/vt/ix-vt-sys",
]
# nix-cargo-unit is the bootstrap tool that renders this workspace's unit graph,
# so it owns its own Cargo.toml + Cargo.lock (it carries its own `[workspace]`).
# Excluding it here keeps the root lockfile from pulling it in, so a root-lock
# bump never recompiles it; its Nix build keys only on its own folder.
exclude = [
  "packages/nix/nix-cargo-unit",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
# Group lints need priority below per-lint overrides so allowlist entries
# (such as `multiple_crate_versions`) can opt out without disabling the group.
# Cargo emits `lint_groups_priority` errors otherwise.
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
# Restriction lint (off even in `all`): forbid anonymous tuple return types so a
# multi-value return is a named struct the reader understands at the call site,
# not a positional `(i32, i32)`. Provided by the indexable-inc/clippy fork.
anonymous_tuple_return_type = "deny"
# Restriction lint (off even in `all`): forbid silently defaulting a fallible
# integer conversion (`u8::try_from(x).unwrap_or(..)` / `.unwrap_or_default()` /
# `.unwrap_or_else(..)`), which clamps or zeroes an out-of-range value and hides
# the overflow. Propagate the `TryFromIntError` instead. Provided by the
# indexable-inc/clippy fork.
fallible_int_fallback = "deny"

[workspace.dependencies]
anstream = "1"
anstyle = "1"
anyhow = "1"
arrow = "59"
ast-merge-ast = { path = "packages/code/ast-merge/ast" }
ast-merge-diff = { path = "packages/code/ast-merge/diff" }
ast-merge-git = { path = "packages/code/ast-merge/git" }
ast-merge-langs = { path = "packages/code/ast-merge/langs" }
ast-merge-matcher = { path = "packages/code/ast-merge/matcher" }
astlog-core = { path = "packages/code/astlog/core" }
axum = "0.8"
base64 = "0.22"
build-version = { path = "packages/build-version" }
bytes = "1"
chrono = { version = "0.4", default-features = false }
clap = "4"
source-atuin = { path = "packages/search/source/atuin" }
source-claude = { path = "packages/search/source/claude" }
source-codex = { path = "packages/search/source/codex" }
source-debug = { path = "packages/search/source/debug" }
source-git = { path = "packages/search/source/git" }
source-journald = { path = "packages/search/source/journald" }
clone-detect = { path = "packages/code/clone-detect/detect" }
clone-hash = { path = "packages/code/clone-detect/hash" }
clone-pragma = { path = "packages/code/clone-detect/pragma" }
clone-scanner = { path = "packages/code/clone-detect/scanner" }
code-highlight = { path = "packages/code/code-highlight" }
code-tokenizer = { path = "packages/search/code-tokenizer" }
github-avatar = { path = "packages/github-avatar" }
google-auth = { path = "packages/google/auth" }
google-calendar = { path = "packages/google/calendar" }
google-gmail = { path = "packages/google/gmail" }
indexbench = { path = "packages/indexbench" }
ix-vt = { path = "packages/tui/vt/ix-vt" }
ix-vt-sys = { path = "packages/tui/vt/ix-vt-sys", version = "0.1.0" }
kitty = { path = "packages/terminal/kitty" }
lake-iceberg = { path = "packages/search/lake/iceberg" }
color-eyre = "0.6"
dashboard-core = { path = "packages/dashboard/dashboard-core" }
devicons = "0.6"
dirs = "6"
edit-applier = { path = "packages/code/edit-applier" }
file-language = { path = "packages/code/file-language" }
flecs-query-core = { path = "packages/flecs-query/core" }
fontdue = "0.9"
futures = "0.3"
git2 = { version = "0.21", default-features = false }
glob = "0.3"
hex = "0.4"
hegeltest = { version = "0.14", default-features = false }
# The Iceberg corpus lake (issue #752). iceberg 0.9 pins arrow/parquet ^57.1
# while the workspace parquet pair is on 59; the 57 tree stays isolated inside
# lake-iceberg (see its Cargo.toml).
iceberg = "0.9"
iceberg-catalog-rest = "0.9"
iceberg-storage-opendal = { version = "0.9", features = ["opendal-s3"] }
ignore = "0.4"
indicatif = "0.18"
insta = { version = "1.42", features = ["json"] }
lazy-regex = "3.4"
libc = "0.2"
libloading = "0.8"
source-linear = { path = "packages/search/source/linear" }
source-github = { path = "packages/search/source/github" }
mixedbread = { path = "packages/search/mixedbread" }
loro = "1.12"
napi = { version = "3", default-features = false, features = ["napi6", "tokio_rt"] }
napi-build = "2"
napi-derive = "3"
ndarray = "0.17"
nix = "0.31"
nix-web-monitor-parser = { path = "packages/nix/nix-web-monitor/parser" }
numpy = "0.28"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
objc2-web-kit = "0.3"
object_store = { version = "0.13", features = ["aws"] }
parking_lot = "0.12"
parquet = { version = "59", features = ["arrow"] }
percent-encoding = "2"
progress-style = { path = "packages/progress-style" }
protobuf = "3"
pty-process = { version = "0.5", features = ["async"] }
pyo3 = { version = "0.28", features = ["abi3-py311"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pythonize = "0.28"
quartz_nbt = "0.2.9"
rayon = "1"
regex = "1"
repo-walker = { path = "packages/repo-walker" }
image = { version = "0.25", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "multipart",
] }
rmp-serde = "1"
rodio = { version = "0.22", default-features = false, features = ["playback", "vorbis"] }
rusqlite = { version = "0.40", features = ["bundled"] }
rustc-hash = "2.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.8"
scip = "0.8"
scipql-core = { path = "packages/code/scipql/core" }
search-core = { path = "packages/search/search-core" }
source-meta = { path = "packages/search/source/meta" }
serde = "1"
serde_json = "1"
serde_norway = "0.9"
sha2 = "0.11"
similar = "3"
source-slack = { path = "packages/search/source/slack" }
source-parquet = { path = "packages/search/source/parquet" }
sink-mixedbread = { path = "packages/search/sink/mixedbread" }
sink-parquet = { path = "packages/search/sink/parquet" }
snafu = "0.9"
strip-ansi-escapes = "0.2"
tango-bench = "0.7"
tantivy = "0.26"
tao = "0.35"
tap-protocol = { path = "packages/tui/tap/protocol" }
tap-pty = { path = "packages/tui/tap/pty" }
tar = "0.4"
tempfile = "3"
terminal-light = "1"
terminal-theme = { path = "packages/terminal/terminal-theme" }
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
toml = { version = "1.1.2", default-features = false }
tower = "0.5"
tower-http = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-dockerfile-updated = "0.2"
tree-sitter-elixir = "0.3"
tree-sitter-go = "0.25"
tree-sitter-haskell = "0.23"
tree-sitter-highlight = "0.26"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-language = "0.1"
tree-sitter-lua = "0.5"
tree-sitter-md = "0.5"
tree-sitter-nix = "0.3"
tree-sitter-ocaml = "0.25"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.26"
tree-sitter-sequel = "0.3"
tree-sitter-svelte-ng = "1.0"
tree-sitter-swift = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-yaml = "0.7"
tui = { path = "packages/tui/tui" }
url = { version = "2.5.8", default-features = false }
uuid = "1"
vt100 = "0.16"
webpki-roots = "1"
wry = "0.55"
x509-parser = "0.18"
