[project]
name = "uv-app-fixture"
version = "0.1.0"
description = "Fixture for ix.buildUvApplication"
requires-python = ">=3.13"
dependencies = [
    "click==8.1.7",
]

[project.scripts]
uv-app-fixture = "uv_app_fixture:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
